add image docker hub

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: razas-api
-          image: razas-api:latest
-          imagePullPolicy: Never
+          image: jahudev/razas-api:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
