--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     volumes:
       - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
-      - /Users/jaigomez/.kube:/var/jenkins_home/.kube:ro
+      - /Users/jaigomez/.kube:/var/jenkins_home/.kube
     restart: unless-stopped
 volumes:
   jenkins_home:
